--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>Nezih Erbay</title>
         <link rel="icon", href="icon.png">
         <style>
+            a {
+                border:none;
+            }
             body {
                 background-color: rgb(20, 20, 20);
             }
