--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
                 font-size: 50px;
             }
             .animbtn{
-                width:160px;
-                height:80px;
+                width:180px;
+                height:90px;
                 border:none;
                 background-color: rgb(21, 156, 21);
                 border-radius: 25px;
                 box-shadow: 0px 10px rgb(9, 109, 9);
                 font-family:Arial, Helvetica, sans-serif;
-                font-size:25px;
+                font-size:24px;
                 color:white;
-                margin-left: 25px;
+                margin:25px;
             }
             .animbtn:hover{
                 cursor:pointer;
@@ -43,9 +43,11 @@
         <a href="http://tr-eatcake.github.io/snake">
             <button id="snakebtn", class="animbtn">Snake</button>
         </a>
+        <br>
         <a href="http://tr-eatcake.github.io/snakev2"> 
             <button id="snakebtn_2", class="animbtn">Snake V2</button>
         </a>
+        <br>
         <a href="http://tr-eatcake.github.io/particle_simulation"> 
             <button id="simulaionbtn", class="animbtn">Particle Simulation</button>
         </a>
