--- a/particle_simulation/index.html
+++ b/particle_simulation/index.html
@@ -31,6 +31,9 @@
 		box-shadow: 0px 5px rgb(9, 109, 9);
 		cursor: pointer;
 	}
+	.b1:hover {
+		background-color: rgb(21, 145, 21);
+	}
 	.b1:active {
 		background-color: rgb(9, 109, 9);
 	}
