optimize and new ui

--- a/particle_simulation/index.html
+++ b/particle_simulation/index.html
@@ -1,273 +1,142 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-<title>Simulation</title>
-<link rel="icon", href="../icon.png">
-<style>
-	body {
-		background-color: rgb(20, 20, 20);
-	}
-	canvas {
-		border: 3px solid white;
-		border-radius: 10px;
-		position: absolute;
-		left: 50px;
-		top: 15px;
-	}
-	.b1 {
-		position: relative;
-		left: 900px;
-		top:480px;
-		font-size: 20px;
-		font-family: Arial, Helvetica, sans-serif;
-		width: 150px;
-		height:60px;
-		background-color: rgb(21, 156, 21);
-		color:white;
-		margin-top: 25px;
-		margin-left: 25px;
-		border: 3px solid rgb(9, 109, 9);
-		border-radius: 10px;
-		box-shadow: 0px 5px rgb(9, 109, 9);
-		cursor: pointer;
-	}
-	.b1:hover {
-		background-color: rgb(21, 145, 21);
-	}
-	.b1:active {
-		background-color: rgb(9, 109, 9);
-	}
-	.anasayfabtn {
-		position: absolute;
-		top: 10px;
-        width: 18px;
-        height: 32px;
-        background-image: url(../imgs/geri_dön.png);
-        background-color: rgb(20, 20, 20);
-        border: none;
-        outline: none;
-        cursor: pointer;
-    }
-</style>
-</head>
-<body>
-<a href="http://tr-eatcake.github.io"><button class="anasayfabtn"></button></a>
-<canvas id="canvas" width="800" height="580"></canvas>
-<button id="tracebtn" class="b1" onclick="tracing()">Yörünge</button>
-<button id="startbtn" class="b1" onclick="startSimulation()">Başlat</button>
-
-<script>
-	const G = 0.8
-	const K = 1000
-
-	const PARTICLE_WIDTH = 10
-	const PARTICLE_HEIGHT = 10
-	const PARTICLE_RADIUS = 5
-	const FPS = 60
-
-	var updateInterval;
-	var running = false;
-
-	var particles = [];
-	var all_tracing = false;
-    
-	var canvas = document.getElementById("canvas")
-	var ctx = canvas.getContext("2d")
-	
-	class Vector2{
-    	constructor(x=0,y=0){
-    	    this.x = x;
-    	    this.y = y;
-    	}
-    	plus(vector){
-    	    var newv = vPlus(this, vector)
-    	    this.x = newv.x
-    	    this.y = newv.y
-    	    return newv
-    	}
-    	minus(vector){
-    	    var newv = vMinus(this, vector)
-    	    this.x = newv.x
-    	    this.y = newv.y
-    	    return newv
-    	}
-    	scale(n){
-    	    this.x *= n
-    	    this.y *= n
-    	    return this
-    	}
-    	normalize(){
-    	    var y;
-    	    var x;
-    	    if (this.length()==0){
-    	        x = 0;
-    	        y = 0;
-    	    }else{
-    	        x = this.x/this.length();
-    	        y = this.y/this.length();
-    	    }
-    	    this.x = x;
-    	    this.y = y;
-    	    return this
-    	}
-    	length(){
-    	    return Math.hypot(this.x,this.y)
-    	}
-	}
-
-	class Particle{
-		constructor(color="white", mass=1, position=new Vector2(), radius=PARTICLE_RADIUS){
-			this.color = color;
-			this.mass = mass;
-			this.magnitude = 0;
-			this.position = position;
-			this.radius = radius;
-			this.force = new Vector2();
-			this.acceleration = new Vector2();
-			this.velocity = new Vector2();
-			this.tracing = false;
-			this.traces = [];
-			this.colliding = false;
-		}
-		spawn(){
-			particles.push(this)
-			this.draw()
-		}
-		momentum(){
-			return this.velocity.multiply(this.mass)
-		}
-		energyK(){
-			return 1/2*this.mass*this.velocity.length()*this.velocity.length()
-		}
-		update(){
-			this.force = new Vector2();
-			this.colliding = false;
-			particles.forEach(p=>{
-				if (p==this) return;
-				var dx = vMinus(p.position, this.position)
-				var ndx = vNormalized(dx)
-				if (dx.length()<=this.radius+p.radius){
-					this.colliding = true
-					var angleDX = Math.atan2(-dx.y, dx.x)
-					this.velocity.minus(vScaled(ndx, this.velocity.length()*Math.cos(Math.atan2(-this.velocity.y,this.velocity.x)-angleDX)))
-					p.velocity.minus(vScaled(ndx, -p.velocity.length()*Math.cos(Math.atan2(-p.velocity.y,p.velocity.x)+angleDX)))
-				}else{
-					var Gforce = vScaled(ndx, (G*this.mass*p.mass)/(dx.length()*dx.length()))
-					this.force = vPlus(this.force, Gforce);
-					var Mforce = vScaled(ndx, -(K*this.magnitude*p.magnitude)/(dx.length()*dx.length()))
-					this.force = vPlus(this.force, Mforce)
-				}
-			})
-			this.acceleration = vScaled(this.force, 1/this.mass)
-			this.velocity = vPlus(this.velocity, this.acceleration)
-			this.position = vPlus(this.position, this.velocity)
-			if (this.tracing){
-				this.traces.push(this.position)
+	<head>
+		<title>Simulation</title>
+		<link rel="icon", href="../icon.png">
+		<style>
+			body {
+				background-color: rgb(20, 20, 20);
 			}
-			/*
-			if (this.position.x >= canvas.width-PARTICLE_WIDTH){
-				this.velocity.x *= -1
-				this.position.x = canvas.width-PARTICLE_WIDTH
+			p {
+				color: white;
+				font-family: Arial, Helvetica, sans-serif;
+				font-size:16px;
 			}
-			if (this.position.x <= 0){
-				this.velocity.x*=-1
-				this.position.x = 0
+			canvas {
+				position: absolute;
+				left:35px;
+				border: 3px solid white;
+				border-radius: 10px;
 			}
-			if (this.position.y>=canvas.height-PARTICLE_HEIGHT){
-				this.velocity.y*=-1
-				this.position.y = canvas.height-PARTICLE_HEIGHT
+			.b1 {
+				position: relative;
+				font-size: 20px;
+				font-family: Arial, Helvetica, sans-serif;
+				width: 200px;
+				height:60px;
+				background-color: rgb(21, 156, 21);
+				color:white;
+				border: 3px solid rgb(9, 109, 9);
+				border-radius: 10px;
+				box-shadow: 0px 5px rgb(9, 109, 9);
+				cursor: pointer;
 			}
-			if (this.position.y<=0){
-				this.velocity.y*=-1
-				this.position.y=0
+			.b1:hover {
+				background-color: rgb(21, 145, 21);
 			}
-			KENARDAN SEKME KODU */
-		}
-		draw(){
-			ctx.fillStyle = this.color;
-			if (this.tracing && all_tracing){
-				this.traces.forEach(trace=>{
-					ctx.beginPath()
-					ctx.arc(trace.x, trace.y, 1,5,0,2*Math.PI)
-					ctx.fill()
-				})
+			.b1:active {
+				background-color: rgb(9, 109, 9);
 			}
-			ctx.beginPath();
-			ctx.arc(this.position.x, this.position.y,this.radius,0,2*Math.PI);
-			ctx.fill()
-		}
-	}
+			.anasayfabtn {
+				position:absolute;
+				top: 10px;
+        		width: 18px;
+        		height: 32px;
+        		background-image: url(../imgs/geri_dön.png);
+        		background-color: rgb(20, 20, 20);
+        		border: none;
+        		outline: none;
+        		cursor: pointer;
+    		}
+			.d1 {
+				position: absolute;
+				padding: 10px;
+				border:3px solid white;
+				border-radius: 10px;
+				background-color: black;
+			}
+			.numinput {
+				width:50px;
+			}
+			.colorinput {
+				width:25px;
+				height:25px;
+			}
+			.rangeinput {
+				width: 200px;
+			}
+			#singlespawndiv {
+				width:200px;
+				height:370px;
+				left:850px;
+			}
+			#multiplespawndiv {
+				width:200px;
+				height:370px;
+				left:1085px;
+			}
+			#mainbuttonsdiv {
+				left:850px;
+				top:410px;
+				width:435px;
+				height:140px;
+			}
+		</style>
+	</head>
+	<body>
+		<a href="http://tr-eatcake.github.io"><button class="anasayfabtn"></button></a>
+		<canvas id="canvas", width="800", height="580"></canvas>
+		<div id="singlespawndiv", class="d1">
+			<p>Parçacık Rengi:
+			<input id="s_particle_color", class="colorinput" type="color", style="margin-left: 5px;">
+			</p>
+			
+			<p id="s_mass_value">Parçacık Kütlesi: </p>
+				<input id="s_particle_mass", class="rangeinput", type="range", min="1",max="100", value="1">
 
-	function tracing(){
-		all_tracing = !all_tracing
-	}
+			<p>Parçacık Konumu:</p>
+			<p>x:
+			<input id="s_particle_x", class="numinput", type="number">
+			y:
+			<input id="s_particle_y", class="numinput", type="number">
+			</p>
 
-	function vPlus(v1, v2){
-		return new Vector2(v1.x+v2.x, v1.y+v2.y)
-	}
+			<p>Parçacık Hızı:</p>
+			<p>x:
+			<input id="s_particle_vx", class="numinput", type="number">
+			y:
+			<input id="s_particle_vy", class="numinput", type="number">
+			</p>
 
-	function vMinus(v1, v2){
-		return new Vector2(v1.x-v2.x, v1.y-v2.y)
-	}
+			<p>Yörünge İzle:
+			<input id="s_particle_tracing", type="checkbox">
+			</p>
 
-	function vScaled(v, n){
-		return new Vector2(v.x*n,v.y*n)
-	}
+			<button class="b1", onclick="spawnSingle(document.getElementById('s_particle_color').value, document.getElementById('s_particle_mass').value, document.getElementById('s_particle_x').value, document.getElementById('s_particle_y').value, document.getElementById('s_particle_vx').value, document.getElementById('s_particle_vy').value, document.getElementById('s_particle_tracing').checked)">Parçacık Oluştur</button>
+		</div>
+		<div id="multiplespawndiv", class="d1">
+			<p>Parçacık Rengi:
+				<input id="m_particle_color", class="colorinput" type="color",value="#FFFFFF", style="margin-left: 5px;">
+			</p>
 
-	function vNormalized(v){
-		if (v.length()==0){
-			return new Vector2();
-		}else{
-			return new Vector2(v.x/v.length(),v.y/v.length());
-		}
-	}
+			<p id="m_mass_value">Parçacık Kütlesi: </p>
+				<input id="m_particle_mass", class="rangeinput", type="range", min="1",max="100", value="1">
 
-	function Update(){
-		ctx.fillStyle = "black";
-		ctx.fillRect(0,0,canvas.width,canvas.height);
-		particles.forEach(p=>{
-			p.update()
-			p.draw()
-		})
-	}
-	function startSimulation(){
-		if (running){
-			running = false;
-			document.getElementById("startbtn").innerHTML = "Başlat";
-			clearInterval(updateInterval);
-		}else{
-			running = true;
-			document.getElementById("startbtn").innerHTML = "Durdur";
-		
-			updateInterval = setInterval(()=>{
-				Update()
-			},1000/FPS)
-		}
-	}
+			<p id="m_count_value">Parçacık Sayısı: </p>
+				<input id="m_particle_count", class="rangeinput", type="range", min="1",max="100", value="0">
 
-	ctx.fillStyle = "black";
-	ctx.fillRect(0,0,canvas.width,canvas.height);
-	
-	p1 = new Particle("red", 10, new Vector2(50, 100))
-	p2 = new Particle("blue", 5, new Vector2(500,300))
-	p3 = new Particle("green", 4, new Vector2(700,150))
-	p4 = new Particle("yellow", 6, new Vector2(200,500))
+			<p>Rastgele Hız:
+				<input id="m_random_velocity", type="checkbox">
+			</p>
 
-	p1.tracing = true;
-	p2.tracing = true;
-	p3.tracing = true;
-	p4.tracing = true;
-
-	p1.spawn()
-	p2.spawn()
-	p3.spawn()
-	p4.spawn()	
-	
-	for (i=0;i<10;i++){
-		var p = new Particle("white", 5, new Vector2(Math.random()*canvas.width,Math.random()*canvas.height))
-		//p.velocity = new Vector2(Math.random(),Math.random())
-		p.spawn()
-	}
-</script>
-</body>
+			<button class="b1", style="bottom: -70px;", onclick="spawnMultiple(document.getElementById('m_particle_color').value, document.getElementById('m_particle_mass').value, document.getElementById('m_particle_count').value, document.getElementById('m_random_velocity').checked)">Çoklu Parçacık Oluştur</button>
+		</div>
+		<div id="mainbuttonsdiv", class="d1">
+			<button id="startbtn", class="b1", onclick="start()">Başlat</button>
+			<button id="tracebtn", class="b1", style="margin-left:30px; top:-12px;" onclick="tracing()">Yörüngeleri Çiz: Kapalı</button>
+			<button id="resetbtn", class="b1", style="bottom:-5px;right: -235px;", onclick="reset()">Sıfırla</button>
+			<p id="total_particle_count", style="position: relative; top:-50px; width:230px;">Toplam Parçacık Sayısı: </p>
+		</div>
+		<script src="./script.js"></script>
+	</body>
 </html>
