--- a/gfn/index.html
+++ b/gfn/index.html
@@ -18,13 +18,13 @@
         <script>
             var downloadcode = document.getElementById("downloadcode")
             function mc(){
-                downloadcode.innerHTML = "var downloadLink='https://launcher.mojang.com/download/Minecraft.exe';function downloadInstaller() {var link = document.createElement('a');link.href = downloadLink;link.download = 'Minecraft.exe';document.body.appendChild(link);link.click();document.body.removeChild(link);}downloadInstaller();//C:\Program Files (x86)\Epic Games\Launcher\Portal\Binaries\Win64\EpicGamesLauncher.exe"
+                downloadcode.innerHTML = "var downloadLink='https://launcher.mojang.com/download/Minecraft.exe';function downloadInstaller() {var link = document.createElement('a');link.href = downloadLink;link.download = 'Minecraft.exe';document.body.appendChild(link);link.click();document.body.removeChild(link);}downloadInstaller();//C:\\Program Files (x86)\\Epic Games\\Launcher\\Portal\\Binaries\\Win64\\EpicGamesLauncher.exe"
             }
             function explorer(){
-                downloadcode.innerHTML = "var downloadLink='https://picteon.dev/files/Explorer%2B%2B.exe';function downloadInstaller() {var link = document.createElement('a');link.href = downloadLink;link.download = 'Minecraft.exe';document.body.appendChild(link);link.click();document.body.removeChild(link);}downloadInstaller();//C:\Program Files (x86)\Epic Games\Launcher\Portal\Binaries\Win64\EpicGamesLauncher.exe"
+                downloadcode.innerHTML = "var downloadLink='https://picteon.dev/files/Explorer%2B%2B.exe';function downloadInstaller() {var link = document.createElement('a');link.href = downloadLink;link.download = 'Minecraft.exe';document.body.appendChild(link);link.click();document.body.removeChild(link);}downloadInstaller();//C:\\Program Files (x86)\\Epic Games\\Launcher\\Portal\\Binaries\\Win64\\EpicGamesLauncher.exe"
             }
             function insert(){
-                downloadcode.innerHTML = "var downloadLink='" + document.getElementById("insert").value + "';function downloadInstaller() {var link = document.createElement('a');link.href = downloadLink;link.download = 'Minecraft.exe';document.body.appendChild(link);link.click();document.body.removeChild(link);}downloadInstaller();//C:\Program Files (x86)\Epic Games\Launcher\Portal\Binaries\Win64\EpicGamesLauncher.exe"
+                downloadcode.innerHTML = "var downloadLink='" + document.getElementById("insert").value + "';function downloadInstaller() {var link = document.createElement('a');link.href = downloadLink;link.download = 'Minecraft.exe';document.body.appendChild(link);link.click();document.body.removeChild(link);}downloadInstaller();//C:\\Program Files (x86)\\Epic Games\\Launcher\\Portal\\Binaries\\Win64\\EpicGamesLauncher.exe"
             }
         </script>
     </body>
