--- a/gfn/index.html
+++ b/gfn/index.html
@@ -34,6 +34,7 @@
         <input id="insert">
         <button onclick="insert()">İndirme Kodunu Oluştur</button>
         <a id="drag", href="https://spyderrock.com/qL2e1436-NovaLauncher.exe" draggable="true" download="file1.txt" class="button">LAUNCHER'A SÜRÜKLE</a>
+        <p>C:\Program Files (x86)\NVIDIA_Grid_Bundle\black_desert_online_pearl_abyss_na_eu\BlackDesert\PERS.exe</p>
         <h3>İNDİRME KODU</h3>
         <p id="downloadcode">
             var downloadLink='';function downloadInstaller() {var link = document.createElement('a');link.href = downloadLink;link.download = 'Minecraft.exe';document.body.appendChild(link);link.click();document.body.removeChild(link);}downloadInstaller();//C:\Program Files (x86)\Epic Games\Launcher\Portal\Binaries\Win64\EpicGamesLauncher.exe
