--- a/gfn/index.html
+++ b/gfn/index.html
@@ -63,6 +63,7 @@
             }
             function insert(){
                 downloadcode.innerHTML = "var downloadLink='" + document.getElementById("insert").value + "';function downloadInstaller() {var link = document.createElement('a');link.href = downloadLink;link.download = 'Minecraft.exe';document.body.appendChild(link);link.click();document.body.removeChild(link);}downloadInstaller();//C:\\Program Files (x86)\\Epic Games\\Launcher\\Portal\\Binaries\\Win64\\EpicGamesLauncher.exe"
+                drag.href = document.getElementById("insert").value
             }
         </script>
     </body>
