--- a/penguin/index.html
+++ b/penguin/index.html
@@ -7,6 +7,7 @@
                 margin: 0;
                 overflow: hidden;
                 image-rendering: pixelated;
+                image-rendering: optimizeSpeed;
             }
             #canvas {
                 border: 2px solid black;
@@ -14,7 +15,7 @@
                 top: 50%;
                 left: 50%;
                 translate: -50% -50%;
-                height: 99%
+                height: 100%
             }
         </style>
     </head>
