added physics (similiar to particle simulation). some changes in particle simulation as well.

--- a/particle_simulation/index.html
+++ b/particle_simulation/index.html
@@ -131,7 +131,7 @@
 				<input id="m_random_velocity", type="checkbox">
 			</p>
 
-			<button class="b1", style="bottom: -35px;", onclick="spawnMultiple(document.getElementById('m_particle_color').value, document.getElementById('m_particle_mass').value, document.getElementById('m_particle_count').value, document.getElementById('m_particle_tracing').checked, document.getElementById('m_random_velocity').checked)">Çoklu Parçacık Oluştur</button>
+			<button class="b1", stzyle="bottom: -35px;", onclick="spawnMultiple(document.getElementById('m_particle_color').value, document.getElementById('m_particle_mass').value, document.getElementById('m_particle_count').value, document.getElementById('m_particle_tracing').checked, document.getElementById('m_random_velocity').checked)">Çoklu Parçacık Oluştur</button>
 		</div>
 		<div id="mainbuttonsdiv", class="d1">
 			<button id="startbtn", class="b1", onclick="start()">Başlat</button>
