--- a/index.html
+++ b/index.html
@@ -51,5 +51,9 @@
         <a href="http://tr-eatcake.github.io/particle_simulation"> 
             <button id="simulaionbtn", class="animbtn">Particle Simulation</button>
         </a>
+        <br>
+        <a href="http://tr-eatcake.github.io/physics"> 
+            <button id="simulaionbtn", class="animbtn">Physics Simulation</button>
+        </a>
     </body>
 </html>
